--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,30 @@
-﻿# virtual env & caches
-MLProgram/venv/
-**/__pycache__/
+﻿# Python cache
+__pycache__/
 *.pyc
+*.pyo
 
-# datasets & artifacts
-MLProgram/data/
-MLProgram/data_images/
-MLProgram/model/
-*.npy
-*.csv
-*.zip
-*.h5
-*.keras
+# Virtual environment
+.venv/
+venv/
+env/
 
-# OS & IDE
-.DS_Store
+# Torch / Large ML packages accidentally included
+**/site-packages/
+**/torch/
+**/torchvision/
+
+# SQLite DB (never commit)
+*.db
+
+# FastAPI generated images
+static/*.png
+
+# OS files
 Thumbs.db
+.DS_Store
+
+# VSCode
 .vscode/
-.idea/
+
+# Logs
+*.log
